# nvim-config

./: .clang_format  .gitignore  README.md  init.lua  lazy-lock.json  lazygit.yml  lazyvim.json
examples/: README.MD
examples/cpp/: .clangdb  CMakeLists.txt  CMakeLists.txt.basic
lua/: helpers.lua  mappings.lua  options.lua  plugins.lua  utils.lua
lua/config/: autocmds.lua  bufferline.lua  catppuccin.lua  cmp.lua  dap.lua  debugging.lua  gitsigns.lua  keymaps.lua  lazy.lua  lazygit.lua  lsp.lua  lualine.lua  luasnip.lua  mason.lua  null_ls.lua  nvimtree.lua  options.lua  telescope.lua  testing.lua  treesitter.lua
lua/config/cmake/: init.lua
lua/plugins/: auto-save.lua  cmake.lua  colors.lua  completion.lua  config-local.lua  dir-telescope.lua  folds.lua  fzf-lua.lua  gitblame.lua  lspconfig.lua  neotree.lua  none-ls.lua  php.lua  sonarlint.lua  tests.lua  workspace.lua
lua/stuff/: init.lua  lazy_init.lua  remap.lua
lua/stuff/lazy/: barbar.lua  init.lua  lsp.lua  lsp_utils  lsp_utils.lua  nerd_tree.lua  treesitter.lua
